--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <header class="header">
     <div class="container">
-      <img src="images/projectlogo.png" alt="USC Logo" class="logo" />
+      <img src="projectlogo.png" alt="USC Logo" class="logo" />
       <h1>CarolinaAnalytics</h1>
     </div>
   </header>
